--- a/style.css
+++ b/style.css
@@ -375,23 +375,12 @@ input[type='submit'] {
   padding: 10px 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8); }
   @media (min-width: 620px) {
-    button button,
-    button input[type='button'],
-    button input[type='reset'],
-    button input[type='submit'],
-    input[type='button'] button,
-    input[type='button'] input[type='button'],
-    input[type='button'] input[type='reset'],
-    input[type='button'] input[type='submit'],
-    input[type='reset'] button,
-    input[type='reset'] input[type='button'],
-    input[type='reset'] input[type='reset'],
-    input[type='reset'] input[type='submit'],
-    input[type='submit'] button,
-    input[type='submit'] input[type='button'],
-    input[type='submit'] input[type='reset'],
-    input[type='submit'] input[type='submit'] {
-      padding: 12px 42px; } }
+    button,
+    input[type='button'],
+    input[type='reset'],
+    input[type='submit'] {
+      padding: 12px 42px;
+      font-size: 18px; } }
   button:hover,
   input[type='button']:hover,
   input[type='reset']:hover,
@@ -455,12 +444,18 @@ a {
 /* Menus */
 .main-navigation {
   clear: both;
-  display: block;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  float: left;
   width: 100%;
   margin: 35px 0 15px; }
+  @media (min-width: 620px) {
+    .main-navigation {
+      width: auto;
+      margin: 15px 0; } }
+  .main-navigation li {
+    padding-right: 1rem; }
   .main-navigation ul {
     list-style: none;
     margin: 0;
@@ -637,6 +632,28 @@ body {
 
 .site-info p {
   font-size: 16px; }
+
+@media (min-width: 620px) {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  .p {
+    margin: 0; } }
+
+@media (min-width: 620px) {
+  .site-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 32px 0; } }
+
+@media (min-width: 620px) {
+  .site-navigation {
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0; } }
 
 /* All Archives Page */
 /* Submit a Quote Page */
